# Chatbot

./: .env.example  .gitignore  Dockerfile  GEMINI.md  Modelfile  README-DEPLOYMENT.md  README-NEXTJS.md  README.md  chatbot.py  deploy.ps1  deploy.sh  docker-compose.yml  env.example  funfacts.json  gf2025-main.json  infographic.html  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/tts/: route.ts
components/: ThreeJSBackground.tsx  VoiceAssistant.tsx
tools/: clean_menu_json.py
training/: api.py  cli.py  config.py
training/chunk/: __init__.py  chonkie.py  parity.py
training/embed/: __init__.py  embedder.py  models.py
training/index/: faiss_store.py
training/ingest/: __init__.py  json_ingest.py  normalize.py  pdf.py
training/safety/: policies.py
